...
  }
  
  // MARK: Actions
  
  @IBAction func handleLBAttributedLabel(_ sender: UIButton) {
    let showsAttributionLabel = mapView.showsLegalLabel
    sender.setTitle(showsAttributionLabel ? "Show Label" : "Hide Label", for: UIControlState())
    mapView.showsLegalLabel = !showsAttributionLabel
  }
  
  @IBAction func handleRBImageView(_ sender: UIButton) {
    let showsImageView = mapView.showsMapInfoImageView
    sender.setTitle(showsImageView ? "Show Image" : "Hide Image", for: UIControlState())
...
